Apply PATCH2/03-common-make.patch

--- a/common/Makefile
+++ b/common/Makefile
@@ -57,7 +57,7 @@ OBJS	= $(AOBJS) $(COBJS)
 
 CPPFLAGS += -I..
 
-all:	$(LIB) $(AOBJS)
+all:	$(LIB) $(OBJS)
 
 $(LIB): .depend $(OBJS)
 	$(AR) crv $@ $(OBJS)
