Apply PATCH2/04-FC6-makefile.patch

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -115,6 +115,8 @@ CPPFLAGS += -I..
 
 all:	.depend $(OBJS) $(LIB) $(SREC) $(BIN)
 
+$(SREC) : $(BIN)
+
 #########################################################################
 $(LIB): .depend $(LIBOBJS)
 	$(AR) crv $@ $(LIBOBJS)
